[package]
name = "twcn-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp = "0.8"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
unicode-segmentation = "1.10.1"
varint-rs = "2.2.0"
