[package]
name = "ddtracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4"
cron = "0.14"
indexmap = { version = "2.7", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
